--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,12 +24,14 @@ requirements:
     - python >=3.8
     - certifi >=2023.7.22
     - charset-normalizer >=3.2.0
-    - dataclasses-json >=0.5.11
+    - dataclasses-json >=0.6.4
+    - deepdiff >=6.0
     - idna >=3.4
     - jsonpath-python >=1.0.6
     - marshmallow >=3.19.0
     - mypy_extensions >=1.0.0
     - packaging >=23.1
+    - pypdf >=4.0
     - python-dateutil >=2.8.2
     - requests >=2.31.0
     - six >=1.16.0
