--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
   host:
     - python >=3.8
     - pip
+    - poetry
   run:
     - eval-type-backport >=0.2.0,<0.3.0
     - pydantic >=2.9.0,<2.10.0
